<resources>
    <string name="SOCKS4a">SOCKS4a</string>
    <string name="SOCKS4a_proxy">SOCKS4a proxy</string>
    <string name="SOCKS5">SOCKS5</string>
    <string name="SOCKS5_proxy">SOCKS5 proxy</string>
    <string name="_8_8_8_8_53">8.8.8.8:53</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_autoproxy_script">Accept script for use</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Activate</string>
    <string name="active">Active:</string>
    <string name="activity_title_ad_rewards">Edit Rewards</string>
    <string name="activity_title_add_dns_local_item_title">Add dns local item</string>
    <string name="activity_title_add_dns_local_items_pull_title">Add dns local items</string>
    <string name="activity_title_add_filter_rule_title">Add filter rule</string>
    <string name="activity_title_add_local_proxy_title">Add local proxy</string>
    <string name="activity_title_conn_details_list">Connection details</string>
    <string name="activity_title_dns_cache_settings_title">DNS cache settings</string>
    <string name="activity_title_dns_crypt_settings_title">DNS crypt settings</string>
    <string name="activity_title_dns_local_settings_title">DNS local settings</string>
    <string name="activity_title_help_title">Help</string>
    <string name="activity_title_local_proxies_title">Local proxies</string>
    <string name="activity_title_network_details">Network details</string>
    <string name="activity_title_network_list">Network list</string>
    <string name="activity_title_network_script_edit">Proxy script</string>
    <string name="activity_title_proxy_credentials">Proxy credentials</string>
    <string name="activity_title_rules_title">Rules</string>
    <string name="activity_title_select_network_from_list">Select Network</string>
    <string name="activity_title_settings_wizard_title">Settings wizard</string>
    <string name="activity_title_shadowsocks_settings_title">Shadowsocks settings</string>
    <string name="ad_free_edit_title">Payments</string>
    <string name="ad_rewards_edit_title">Edit Rewards</string>
    <string name="ad_rewards_title">Ad Rewards</string>
    <string name="add">Add</string>
    <string name="add_add_local_proxy_dns_enable_text">Handle DNS</string>
    <string name="add_add_local_proxy_enabled_text">Enabled</string>
    <string name="add_dns_list_item_address_hint">Enter Address</string>
    <string name="add_dns_list_item_hostname_hint">Enter Hostname</string>
    <string name="add_dns_list_items_select">Select url</string>
    <string name="add_dns_list_items_url_name_hint">Specify url name</string>
    <string name="add_dns_local_list_address_text">Address</string>
    <string name="add_dns_local_list_hostname_text">Hostname</string>
    <string name="add_dns_local_list_item_result_status">Not downloaded</string>
    <string name="add_dns_local_list_item_result_text">Status:</string>
    <string name="add_dns_local_list_item_url_hint">Enter url http://…</string>
    <string name="add_dns_local_list_item_url_text">URL:</string>
    <string name="add_dns_local_list_item_urls_text">URLs:</string>
    <string name="add_dns_local_list_items_url_name">Name:</string>
    <string name="add_dns_local_list_items_url_value">URL:</string>
    <string name="add_dns_local_list_items_url_value_hint">https://raw.githubusercontent.com/…</string>
    <string name="add_filter_rule_action_text">Action</string>
    <string name="add_filter_rule_app_action_prompt">Choose action for rule</string>
    <string name="add_filter_rule_app_spinner_prompt">Select application</string>
    <string name="add_filter_rule_app_text">Application</string>
    <string name="add_filter_rule_client_hint">Client IP or empty</string>
    <string name="add_filter_rule_client_text">Client</string>
    <string name="ads_free_title">Payments</string>
    <string name="ads_title">Ads</string>
    <string name="chiper">Chiper:</string>
    <string name="debug_messages_shown">Debug messages shown</string>
    <string name="dns_crypt_resolver_select">Choose predifined resolver</string>
    <string name="dns_mappings_common_network_id">ALL</string>
    <string name="domain_or_realm">Domain or realm</string>
    <string name="enter_local_port">Enter local port</string>
    <string name="enter_port_number">Enter port number</string>
    <string name="enter_resolver_address">Enter resolver address</string>
    <string name="enter_resolver_name">Enter resolver name</string>
    <string name="enter_resolver_public_key">Enter resolver public key</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="enter_server_dns">Enter server dns</string>
    <string name="enter_server_password">Enter server password</string>
    <string name="enter_server_port">Enter server port</string>
    <string name="hostname">Hostname</string>
    <string name="intent_data_tag_from_preferences">FROM_PREFERENCES</string>
    <string name="list_of_resolvers">List of resolvers:</string>
    <string name="listening_port">Listening port:</string>
    <string name="localport">LocalPort:</string>
    <string name="manual_domain_realm">manual domain realm</string>
    <string name="manual_password">manual password</string>
    <string name="manual_server_name">manual server name</string>
    <string name="manual_server_port">manual server port</string>
    <string name="manual_username">manual username</string>
    <string name="manual_workstation">manual workstation</string>
    <string name="network_id">Network Id</string>
    <string name="networkid">NetworkId</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="preferences_default_value_filter_default_rule">Allow all</string>
    <string name="preferences_dialog_title_proxy_common_port_text">Set proxy port</string>
    <string name="preferences_dns_category">Dns</string>
    <string name="preferences_filter_category">Filter</string>
    <string name="preferences_hint_proxy_common_port_text">Enter proxy port as number</string>
    <string name="preferences_key_dns_mappings_common">preferences_key_dns_mappings_common</string>
    <string name="preferences_key_filter_default_rule">preferences_key_filter_default_rule</string>
    <string name="preferences_key_filter_rules_all">preferences_key_filter_rules_all</string>
    <string name="preferences_key_network_default_list">preferences_key_network_default_list</string>
    <string name="preferences_key_network_list">preferences_key_network_list</string>
    <string name="preferences_key_proxy_common_persistence_flag_deafult_value">preferences_key_proxy_common_persistence_flag_deafult_value</string>
    <string name="preferences_key_proxy_common_persistence_flag_on_credentials_screen">preferences_key_proxy_common_persistence_flag_on_credentials_screen</string>
    <string name="preferences_key_proxy_common_port_text">preferences_key_proxy_common_port_text</string>
    <string name="preferences_key_proxy_common_visible_outside_checkbox">preferences_key_proxy_common_visible_outside_checkbox</string>
    <string name="preferences_proxy_common_category">Proxy</string>
    <string name="preferences_proxy_credentials_category">Credentials</string>
    <string name="preferences_proxy_networks_category">Networks</string>
    <string name="preferences_summary_dns_mappings_common">Set dns mappings for all networks</string>
    <string name="preferences_summary_filter_rules_all">Edit filter rules</string>
    <string name="preferences_summary_proxy_common_persistence_flag_deafult_value_on">ON</string>
    <string name="preferences_summary_proxy_common_persistence_flag_on_credentials_screen_on">Option will be shown</string>
    <string name="preferences_summary_proxy_common_port_text">Proxy port</string>
    <string name="preferences_summary_proxy_common_visible_outside_checkbox">Proxy can be accessed by other devices on network</string>
    <string name="preferences_title_dns_mappings_common">Dns global mappings</string>
    <string name="preferences_title_filter_default_rule">Default value</string>
    <string name="preferences_title_filter_rules_all">Rules</string>
    <string name="preferences_title_network_default_list">Not Wi-Fi (Mobile, Ethernet, …)</string>
    <string name="preferences_title_network_list">Wi-Fi</string>
    <string name="preferences_title_proxy_common_persistence_flag_deafult_value">Default persistence value</string>
    <string name="preferences_title_proxy_common_persistence_flag_on_credentials_screen">Persistence option on credentials form</string>
    <string name="preferences_title_proxy_common_port_text">Proxy port</string>
    <string name="preferences_title_proxy_common_visible_outside_checkbox">Proxy is visible from outside</string>
    <string name="preferences_value_proxy_common_port_text">8020</string>
    <string name="proxy_type">Proxy type</string>
    <string name="public_key">Public key:</string>
    <string name="resolver_address">Resolver address:</string>
    <string name="resolver_name">Resolver name:</string>
    <string name="route_type">Route type:</string>
    <string name="script_cache_timeout">Script Cache timeout</string>
    <string name="script_cache_timeout_2">script cache timeout</string>
    <string name="script_fetch_interval">Script fetch interval</string>
    <string name="script_fetch_timeout">script fetch timeout</string>
    <string name="script_url">script url</string>
    <string name="server_dns_redirect">Server dns redirect:</string>
    <string name="server_password">Server Password:</string>
    <string name="serveraddress">ServerAddress:</string>
    <string name="serverport">ServerPort:</string>
    <string name="shadowsocks_chiper_select">Choose chiper</string>
    <string name="shadowsocks_routes_types_selection">Choose route</string>
    <string name="use_only_tcp">Use only TCP</string>
    <string name="username">Username</string>
    <string name="workstation_name">Workstation name</string>
    <string name="wpad_pac_script_url">Wpad/Pac script url</string>
</resources>