<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/textViewNetworkId" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/networkid" android:layout_alignParentTop="true" style="?android:listSeparatorTextViewStyle" />
    <RelativeLayout android:id="@id/dns_settings_relative_layout_holder" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/textViewNetworkId">
        <ScrollView android:id="@id/scrollSettings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:id="@id/tvTextPort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listening_port" />
                    <EditText android:id="@id/editTextPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/enter_port_number" android:inputType="number" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:id="@id/tvTextProviderName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/list_of_resolvers" />
                    <Spinner android:gravity="center" android:entries="@array/dns_crypt_resolvers" android:id="@id/spinnerDnsCryptProviderSelection" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/dns_crypt_resolver_select" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:id="@id/tvTextResolverName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolver_name" />
                    <EditText android:id="@id/editTextProviderName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/enter_resolver_name" />
                </LinearLayout>
                <TextView android:id="@id/tvTextResloverAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resolver_address" />
                <EditText android:id="@id/editTextResolverAddress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/enter_resolver_address" />
                <TextView android:id="@id/tvTextPublicKey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/public_key" />
                <EditText android:id="@id/editTextResolverPublicKey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/enter_resolver_public_key" />
                <CheckBox android:id="@id/checkBoxUseTcp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/use_only_tcp" />
                <CheckBox android:id="@id/checkBoxLogging" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/debug_messages_shown" />
                <TextView android:id="@id/dnsResolverLocation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
                <TextView android:id="@id/dnsResolverDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
                <TextView android:id="@id/dnsResolverDNSSECValidation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
                <TextView android:id="@id/dnsResolverNoLogs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
                <TextView android:id="@id/dnsResolverAllData" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>